--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,7 @@
-crewai>=0.28.0
-fastapi>=0.104.0
-uvicorn[standard]>=0.24.0
-yfinance>=0.2.28
-alpha-vantage>=2.3.1
-redis>=5.0.1
-asyncpg>=0.29.0
-python-dotenv>=1.0.0
-pydantic>=2.5.0
-httpx>=0.25.0
-aiohttp>=3.9.0
-numpy>=1.24.0
-pandas>=2.1.0
-langchain>=0.1.0
-openai>=1.3.0
-anthropic>=0.7.0
-gunicorn>=21.2.0
-pytest>=7.4.0
-pytest-asyncio>=0.21.0
-black>=23.0.0
-flake8>=6.0.0
-python-dateutil>=2.8.2
-ta>=0.10.2
-plotly>=5.17.0
-requests>=2.31.0 
+fastapi==0.104.1
+uvicorn[standard]==0.24.0
+pydantic==2.5.0
+python-multipart==0.0.6
+supabase==2.3.0
+httpx==0.25.2
+redis==5.0.1 
