--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
-pydantic==2.5.0
+pydantic>=2.0.0,<3.0.0
 python-multipart==0.0.6
 supabase==2.3.0
-httpx>=0.24.0,<0.25.0
-redis==5.0.1 
+httpx==0.24.1
+redis>=5.0.0,<6.0.0 
