--- a/render.yaml
+++ b/render.yaml
@@ -1,28 +1,21 @@
 services:
-  # Main FastAPI Application
+  # Enhanced FinAgent API
   - type: web
-    name: finagent-api
+    name: finagent-enhanced
     runtime: python
     plan: starter
-    buildCommand: pip install -r requirements.txt
-    startCommand: uvicorn main:app --host 0.0.0.0 --port $PORT --workers 2
+    buildCommand: pip install -r requirements_enhanced.txt
+    startCommand: uvicorn main_enhanced_complete:app --host 0.0.0.0 --port $PORT --workers 1
     envVars:
       - key: PYTHON_VERSION
         value: 3.11.0
       - key: ENVIRONMENT
         value: production
-      - key: REDIS_URL
-        fromService:
-          type: redis
-          name: finagent-redis
-          property: connectionString
-      - key: DATABASE_URL
-        fromDatabase:
-          name: finagent-db
-          property: connectionString
-      - key: OPENAI_API_KEY
+      - key: SUPABASE_URL
         sync: false
-      - key: ANTHROPIC_API_KEY
+      - key: SUPABASE_ANON_KEY
+        sync: false
+      - key: OPENAI_API_KEY
         sync: false
       - key: ALPHA_VANTAGE_API_KEY
         sync: false
