--- a/render.yaml
+++ b/render.yaml
@@ -4,7 +4,7 @@ services:
     name: finagent-enhanced
     runtime: python
     plan: starter
-    buildCommand: pip install -r requirements_enhanced.txt
+    buildCommand: pip install -r requirements.txt
     startCommand: uvicorn main_enhanced_complete:app --host 0.0.0.0 --port $PORT --workers 1
     envVars:
       - key: PYTHON_VERSION
