--- a/requirements_enhanced.txt
+++ b/requirements_enhanced.txt
@@ -5,4 +5,5 @@ httpx==0.24.1
 supabase==2.0.2
 aiohttp==3.9.1
 python-dotenv==1.0.0
-python-multipart==0.0.6 
+python-multipart==0.0.6
+beautifulsoup4==4.12.2 
